--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -29,3 +29,17 @@
 /* .user-component {
   padding: 0px var(--horizontal-space);
 } */
+/* 0109 */
+.user-component__avatar--sm {
+  width: 60px;
+  height: 60px;
+  border-radius: 25px;
+}
+
+.user-component__title--not-bold {
+  font-weight: 400;
+}
+
+.user-component__column:last-child {
+  color: rgba(0, 0, 0, 0.5);
+}
