--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -48,3 +48,16 @@
   opacity: 0.7;
   margin-left: 5px;
 } */
+/* 0109*/
+.friends-screen__channel {
+  margin-top: 25px;
+  border-top: 1px solid rgba(0, 0, 0, 0.2);
+  padding-top: 15px;
+}
+
+.friends-screen__channel-header {
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: space-between;
+  color: rgba(0, 0, 0, 0.5);
+}
